pretty much down with the layout

--- a/index.html
+++ b/index.html
@@ -415,9 +415,103 @@
                     <p class="section__info--para tacenter">
                         And we have got answers to all of them. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     </p>
+                    <div class="faq__buttons">
+                        <button class="faq__button">
+                            <div class="faq__button--text">Are all the templates easily customizable?</div>
+                            <div class="faq__button--arrow">v</div>
+                        </button>
+                        <button class="faq__button">
+                            <div class="faq__button--text">Howlong do you usually support a standalone template for?</div>
+                            <div class="faq__button--arrow">v</div>
+                        </button>
+                        <button class="faq__button">
+                            <div class="faq__button--text">What kind of payments do you accept?</div>
+                            <div class="faq__button--arrow">v</div>
+                        </button>
+                        <button class="faq__button">
+                            <div class="faq__button--text">Is there a subscription service to get the latest templates?</div>
+                            <div class="faq__button--arrow">v</div>
+                        </button>
+                        <button class="faq__button">
+                            <div class="faq__button--text">Are the tmeplates compatible with React?</div>
+                            <div class="faq__button--arrow">v</div>
+                        </button>
+                        <button class="faq__button">
+                            <div class="faq__button--text">Do you support Ineternet Explorer 11?</div>
+                            <div class="faq__button--arrow">v</div>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <section id="banner">
+        <div class="container">
+            <div class="row">
+                <div class="banner">
+                    <div class="banner__text">
+                        Developers all over the world are happily using This.
+                    </div>
+                    <div class="banner__btns">
+                        <div class="banner__btn">
+                            Get Started
+                        </div>
+                        <div class="banner__btn banner__btn--invert">
+                            Contact Us
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="row">
+            <div class="footer__links--holder">
+                <div class="footer__links--column">
+                    <div class="column__title">Main</div>
+                    <a href="" class="column__link">Blog</a>
+                    <a href="" class="column__link">FAQs</a>
+                    <a href="" class="column__link">Support</a>
+                    <a href="" class="column__link">About Us</a>
+                </div>
+                <div class="footer__links--column">
+                    <div class="column__title">Product</div>
+                    <a href="" class="column__link">Blog</a>
+                    <a href="" class="column__link">FAQs</a>
+                    <a href="" class="column__link">Support</a>
+                    <a href="" class="column__link">About Us</a>
+                </div>
+                <div class="footer__links--column">
+                    <div class="column__title">Press</div>
+                    <a href="" class="column__link">Blog</a>
+                    <a href="" class="column__link">FAQs</a>
+                    <a href="" class="column__link">Support</a>
+                    <a href="" class="column__link">About Us</a>
+                </div>
+                <div class="footer__links--column">
+                    <div class="column__title">Team</div>
+                    <a href="" class="column__link">Blog</a>
+                    <a href="" class="column__link">FAQs</a>
+                    <a href="" class="column__link">Support</a>
+                    <a href="" class="column__link">About Us</a>
+                </div>
+                <div class="footer__links--column">
+                    <div class="column__title">Legal</div>
+                    <a href="" class="column__link">Blog</a>
+                    <a href="" class="column__link">FAQs</a>
+                    <a href="" class="column__link">Support</a>
+                    <a href="" class="column__link">About Us</a>
+                </div>
+            </div>
+            <div class="lower__footer">
+                <div class="line"></div>
+            </div>
+            <div class="copyright">
+                © 2022 adhochero All Rights Reserved.
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
